--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,30 +1,25 @@
-.feedbackOptions {
+.button__list {
+  padding: 0px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: 25px;
+  justify-content: space-evenly;
+  list-style: none;
 }
 
-.feedbackBtn {
-  background: #07b9e6;
-  border: none;
-  border-radius: 2px;
-  width: 100px;
-  padding: 15px 0;
+.button__btn {
+  padding: 5px 20px;
   cursor: pointer;
-  box-shadow: 0px 0px 5px 3px rgba(6, 90, 5, 0.3);
+  color: rgb(53, 8, 95);
+  background: rgb(3, 243, 191);
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px 3px rgba(2, 105, 71, 0.4);
 }
 
-.feedbackBtn:not(:last-child) {
-  margin-bottom: 10px;
+.button__btn:hover {
+  background: rgb(239, 243, 3);
+  box-shadow: 0px 0px 8px 5px rgba(229, 245, 4, 0.4);
 }
 
-.feedbackBtn:hover {
-  background: #e5ff55;
-  box-shadow: 0px 0px 5px 3px rgba(3, 155, 135, 0.5);
-}
-
-.feedbackBtn::first-letter {
-  text-transform: capitalize;
+.button__btn:active {
+  transform: scale(1.1);
 }
