--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,12 +1,6 @@
 .section {
-  display: block;
+  width: 280px;
   text-align: center;
-  align-items: center;
-  padding: 60px 0;
-}
-
-.section__title {
-  font-size: 24px;
-  letter-spacing: 0.04em;
-  color: rgb(100, 100, 100);
+  margin: 5px auto;
+  padding: 10px;
 }
