--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,27 +1,14 @@
-.stat {
-    height: 100%;
-    text-align: left;
-    width: 200px;
-  }
-  
-  .stat__title {
-    margin-bottom: 10px;
-    color: rgb(100, 100, 100);
-  }
-  
-  .stat__item:not(:last-child) {
-    margin-bottom: 5px;
-  }
-
-.stat__list {
-  text-decoration: none;
-  padding-left: 20px;
+.title {
+  color: dimgray;
 }
 
-.stat__item {
-  list-style-type: none;
+.statistics__list {
+  padding: 5px;
+  list-style: none;
+  text-align: center;
 }
 
-  p {
-    color: rgb(43, 26, 138);
-  }
+.statistics__li {
+  padding-top: 5px;
+  color: darkslategray;
+}
